Set ChaosAction subjects to be optional as sit is subjective to the action and hence not necessary in some cases.